[build-system]
requires = [
    "hatchling>=1.25",
    "hatch-vcs>=0.4",
    "openapi-python-client>=0.25"
]
build-backend = "hatchling.build"

[project]
name = "dcn"
description = "Decentralized Creative Network Python package"
readme = "README.md"
authors = [{ name = "hypermusic.ai" }]
license = { text = "BSD-2-Clause" }
requires-python = ">=3.9"
dependencies = [
    "hatchling>=1.27",
    "eth-account>=0.10",
    "pydantic>=2.6,<3",
    "httpx>=0.27,<1",
    "attrs>=23.1,<24",
    "python-dateutil>=1.4",
]
dynamic = ["version"]  # pulled from Git tag by hatch-vcs

[project.urls]
Homepage = "https://decentralised.art/"

[project.scripts]
dcn-auth = "dcn.cli:main"

[tool.hatch.version]
source = "vcs"   # derive version from tags like dcn-python-v0.1.0

[tool.hatch.build.hooks.vcs]
root = ".."
tag-pattern = "^dcn-python-v(?P<version>.*)$"
version-file = "dcn/_version.py"   # optional but recommended for sdists

[tool.hatch.version.raw-options]
fallback_version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["dcn"]

[tool.hatch.build.targets.sdist]
include = [
  "dcn/**",
  "pyproject.toml",
  "README.md",
  "openapi-python-client.json",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
test = [
  "requests>=2.31"     # only for tests
]

[tool.hatch.envs.test]
features = ["test"]   # installs the [project.optional-dependencies].test extra

[tool.hatch.envs.test.scripts]
unit = "python -m unittest discover -s tests -p 'test_*.py' -v"

[tool.hatch.envs.default.scripts]
codegen = "python gen_client.py"