[build-system]
requires = [
    "hatchling>=1.25",
    "hatch-vcs>=0.4",
    "openapi-python-client>=0.25",
    "PyYAML>=6.0"
]
build-backend = "hatchling.build"

[project]
name = "dcn"
description = "Decentralized Creative Network Python package"
readme = "README.md"
authors = [{ name = "hypermusic.ai" }]
license = { text = "BSD-2-Clause" }
requires-python = ">=3.9"
dependencies = [
    "hatchling>=1.27",
    "eth-account>=0.10",
    "pydantic>=2.6,<3",
    "httpx>=0.27,<1",
    "attrs>=23.1,<24",
    "python-dateutil>=1.4",
]
dynamic = ["version"]  # pulled from Git tag by hatch-vcs

[project.urls]
Homepage = "https://decentralised.art/"

[project.scripts]
dcn-auth = "dcn.cli:main"

[tool.hatch.version]
source = "vcs"   # derive version from tags like v0.1.0

[tool.hatch.build.hooks.vcs]
root = ".."
tag-pattern = "^v(?P<version>.*)$"
version-file = "dcn/_version.py"   # optional but recommended for sdists

[tool.hatch.version.raw-options]
fallback_version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["dcn", "dcn.dcn_api_client"]

# Ensure the whole tree is included even if Hatch didn't detect it as a package
[tool.hatch.build.targets.wheel.force-include]
"dcn/dcn_api_client" = "dcn/dcn_api_client"

[tool.hatch.build.targets.sdist]
include = [
    "dcn/**",
    "pyproject.toml",
    "README.md",
    "scripts/bundle-openapi.py",
    "scripts/codegen.py",
]

[tool.hatch.build.hooks.custom]
path = "scripts/codegen.py"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
test = [
  "requests>=2.31",
  "coverage[toml]>=7.6",
  "flake8>=7.1",
  "mypy>=1.10",
  "openapi-python-client>=0.25",
  "pyright>=1.1.390",
  "PyYAML>=6.0",
  "types-PyYAML>=6.0"
]

[tool.coverage.run]
branch = true
source = ["dcn"]
omit = [
  "dcn/dcn_api_client/*",
  "dcn/_version.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
include = ["dcn", "scripts"]
exclude = ["dcn/dcn_api_client", "build"]

[tool.mypy]
strict = true
files = ["dcn", "scripts"]
exclude = "dcn/dcn_api_client|build"

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.hatch.envs.test]
features = ["test"]   # installs the [project.optional-dependencies].test extra

[tool.hatch.envs.test.scripts]
unit = "python scripts/codegen.py && python -m unittest discover -s tests -p 'test_*.py' -v"
coverage = "python scripts/codegen.py && coverage run -m unittest discover -s tests -p 'test_*.py' -v && coverage report"
lint = "flake8 dcn scripts tests"
type = "python scripts/codegen.py && python -m pyright && python -m mypy"

[tool.hatch.envs.default.scripts]
codegen = "python scripts/codegen.py"
